--- a/jzy-search-service/pom.xml
+++ b/jzy-search-service/pom.xml
@@ -23,8 +23,6 @@
     </properties>
 
     <dependencies>
-
-
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -81,7 +79,6 @@
         </dependency>
 
 
-
         <dependency>
             <groupId>javassist</groupId>
             <artifactId>javassist</artifactId>
@@ -97,12 +94,29 @@
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+
+
+
+
         <dependency>
             <groupId>cn.jzy</groupId>
             <artifactId>jzy-search-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.jzy</groupId>
+            <artifactId>jzy-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.13.4</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
