--- a/jzy-sellergoods-service/pom.xml
+++ b/jzy-sellergoods-service/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>jzy-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.jzy</groupId>
+            <artifactId>jzy-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
