--- a/jzy-manager-web/pom.xml
+++ b/jzy-manager-web/pom.xml
@@ -112,6 +112,11 @@
         </dependency>
         <dependency>
             <groupId>cn.jzy</groupId>
+            <artifactId>jzy-search-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.jzy</groupId>
             <artifactId>jzy-content-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
