--- a/jzy-manager-web/pom.xml
+++ b/jzy-manager-web/pom.xml
@@ -110,11 +110,7 @@
             <artifactId>jzy-sellergoods-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>cn.jzy</groupId>
-            <artifactId>jzy-search-interface</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
         <dependency>
             <groupId>cn.jzy</groupId>
             <artifactId>jzy-content-interface</artifactId>
@@ -122,13 +118,14 @@
         </dependency>
         <dependency>
             <groupId>cn.jzy</groupId>
-            <artifactId>jzy-page-interface</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.jzy</groupId>
             <artifactId>jzy-common</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- 消息队列 -->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.13.4</version>
         </dependency>
     </dependencies>
 
