--- a/pom.xml
+++ b/pom.xml
@@ -283,7 +283,7 @@
 
         <plugins>
             <!-- java编译插件 -->
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
@@ -292,7 +292,7 @@
                     <target>1.7</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
 
     </build>
