--- a/jzy-cart-web/pom.xml
+++ b/jzy-cart-web/pom.xml
@@ -126,6 +126,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>cn.jzy</groupId>
+            <artifactId>jzy-user-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.jzy</groupId>
+            <artifactId>jzy-order-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
